--- a/templates/GetEmpOutput.html
+++ b/templates/GetEmpOutput.html
@@ -45,7 +45,7 @@
 
 					Salary(RM):<br> {{ salary }}<br><br>
 
-					<button type="submit" value="{{id}}" style="background: rgb(34, 151, 34); height: 45px; width: 200px; color:white; font:oblique; border-width: 0ch;cursor:pointer" formaction="/edit">Edit</button><br><br>
+					<button name="emp_id" type="submit" value="{{id}}" style="background: rgb(34, 151, 34); height: 45px; width: 200px; color:white; font:oblique; border-width: 0ch;cursor:pointer" formaction="/edit">Edit</button><br><br>
 					<button type="submit" style="background: grey ; height: 45px; width: 200px; color:white; font:oblique; border-width: 0ch;cursor:pointer" formaction="/GetEmp">Back</button>
 					<button name="cert_id" value="{{id}}" type="submit" style="background: royalblue ; height: 45px; width: 200px; color:white; font:oblique; border-width: 0ch;cursor:pointer" formaction="/viewCert">View Cert</button>
 				</div>
